[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/PlayerSelectControl.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Raleway/Raleway-SemiBoldItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Materials/Textures/player1box.tres" type="StyleBox" id=3]
[ext_resource path="res://Fonts/Raleway/Raleway-LightItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Materials/Textures/player2box.tres" type="StyleBox" id=5]

[sub_resource type="DynamicFont" id=1]
size = 52
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.529412, 0.529412, 0.529412, 0.439216 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
size = 44
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.541176, 0.541176, 0.541176, 0.345098 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PlayerSelect" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -1.0
margin_right = 2.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="PlayerSelectControl" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 20.0
margin_right = 1004.0
margin_bottom = 601.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Player 1" type="VBoxContainer" parent="PlayerSelectControl"]
editor/display_folded = true
margin_right = 325.0
margin_bottom = 601.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="MarginContainer" parent="PlayerSelectControl/Player 1"]
margin_right = 325.0
margin_bottom = 82.0
size_flags_horizontal = 3
custom_constants/margin_top = 20

[node name="Player Label" type="Label" parent="PlayerSelectControl/Player 1/Label"]
margin_top = 20.0
margin_right = 325.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
text = "Player 1"

[node name="PlayerBox" type="MarginContainer" parent="PlayerSelectControl/Player 1"]
margin_top = 86.0
margin_right = 325.0
margin_bottom = 601.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="PlayerSelectControl/Player 1/PlayerBox"]
margin_right = 325.0
margin_bottom = 495.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="Boxes" type="VBoxContainer" parent="PlayerSelectControl/Player 1/PlayerBox"]
margin_right = 325.0
margin_bottom = 495.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Controller" type="MarginContainer" parent="PlayerSelectControl/Player 1/PlayerBox/Boxes"]
margin_right = 325.0
margin_bottom = 245.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="PlayerSelectControl/Player 1/PlayerBox/Boxes/Controller"]
margin_left = 50.0
margin_top = 50.0
margin_right = 275.0
margin_bottom = 195.0
custom_styles/panel = SubResource( 2 )

[node name="ControllerIcon" type="TextureRect" parent="PlayerSelectControl/Player 1/PlayerBox/Boxes/Controller"]
margin_left = 50.0
margin_top = 50.0
margin_right = 275.0
margin_bottom = 195.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="Ready" type="MarginContainer" parent="PlayerSelectControl/Player 1/PlayerBox/Boxes"]
margin_top = 249.0
margin_right = 325.0
margin_bottom = 495.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="ReadyIcon" type="TextureRect" parent="PlayerSelectControl/Player 1/PlayerBox/Boxes/Ready"]
margin_left = 50.0
margin_top = 50.0
margin_right = 275.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="Controllers" type="VBoxContainer" parent="PlayerSelectControl"]
margin_left = 329.0
margin_right = 654.0
margin_bottom = 601.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="PlayerSelectControl/Controllers"]
editor/display_folded = true
margin_right = 325.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="PlayerSelectControl/Controllers/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 318.0
margin_bottom = 60.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="PlayerSelectControl/Controllers/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 318.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Player Select"
align = 1

[node name="ControllerList" type="MarginContainer" parent="PlayerSelectControl/Controllers"]
editor/display_folded = true
margin_top = 71.0
margin_right = 325.0
margin_bottom = 601.0
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="Panel" type="Panel" parent="PlayerSelectControl/Controllers/ControllerList"]
margin_left = 30.0
margin_top = 30.0
margin_right = 295.0
margin_bottom = 500.0
custom_styles/panel = SubResource( 4 )

[node name="Boxes" type="VBoxContainer" parent="PlayerSelectControl/Controllers/ControllerList"]
margin_left = 30.0
margin_top = 30.0
margin_right = 295.0
margin_bottom = 500.0

[node name="Keyboard" type="TextureRect" parent="PlayerSelectControl/Controllers/ControllerList/Boxes"]
margin_right = 265.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="Controller1" type="TextureRect" parent="PlayerSelectControl/Controllers/ControllerList/Boxes"]
margin_top = 158.0
margin_right = 265.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="Controller2" type="TextureRect" parent="PlayerSelectControl/Controllers/ControllerList/Boxes"]
margin_top = 316.0
margin_right = 265.0
margin_bottom = 470.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="Player 2" type="VBoxContainer" parent="PlayerSelectControl"]
editor/display_folded = true
margin_left = 658.0
margin_right = 984.0
margin_bottom = 601.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="MarginContainer" parent="PlayerSelectControl/Player 2"]
editor/display_folded = true
margin_right = 326.0
margin_bottom = 82.0
size_flags_horizontal = 3
custom_constants/margin_top = 20

[node name="Player Label" type="Label" parent="PlayerSelectControl/Player 2/Label"]
margin_top = 20.0
margin_right = 326.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 1, 1 )
text = "Player 2"
align = 2

[node name="PlayerBox" type="MarginContainer" parent="PlayerSelectControl/Player 2"]
editor/display_folded = true
margin_top = 86.0
margin_right = 326.0
margin_bottom = 601.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="PlayerSelectControl/Player 2/PlayerBox"]
margin_right = 326.0
margin_bottom = 495.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 5 )

[node name="Boxes" type="VBoxContainer" parent="PlayerSelectControl/Player 2/PlayerBox"]
editor/display_folded = true
margin_right = 326.0
margin_bottom = 495.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Controller" type="MarginContainer" parent="PlayerSelectControl/Player 2/PlayerBox/Boxes"]
editor/display_folded = true
margin_right = 326.0
margin_bottom = 245.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="PlayerSelectControl/Player 2/PlayerBox/Boxes/Controller"]
margin_left = 50.0
margin_top = 50.0
margin_right = 276.0
margin_bottom = 195.0
custom_styles/panel = SubResource( 2 )

[node name="ControllerIcon" type="TextureRect" parent="PlayerSelectControl/Player 2/PlayerBox/Boxes/Controller"]
margin_left = 50.0
margin_top = 50.0
margin_right = 276.0
margin_bottom = 195.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="Ready" type="MarginContainer" parent="PlayerSelectControl/Player 2/PlayerBox/Boxes"]
editor/display_folded = true
margin_top = 249.0
margin_right = 326.0
margin_bottom = 495.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="ReadyIcon" type="TextureRect" parent="PlayerSelectControl/Player 2/PlayerBox/Boxes/Ready"]
margin_left = 50.0
margin_top = 50.0
margin_right = 276.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="StartContainer" type="MarginContainer" parent="."]
margin_left = 20.0
margin_right = 1004.0
margin_bottom = 601.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="Start" type="TextureRect" parent="StartContainer"]
margin_left = 20.0
margin_right = 964.0
margin_bottom = 591.0
size_flags_vertical = 3
expand = true
stretch_mode = 6
